Add support for missing AtkState types

The missing states already exist in the platform-independent accessibility
code and are already used in the platform-specific accessibility code. They
just need to be exposed via ATK.

R=dmazzoni@chromium.org

Bug: 868735
Test: AXPlatformNodeAuraLinuxTest.TestAtkObjectState
Change-Id: I098c5e53d4a1f5cf44331847ef5790c46e1d59d7
Reviewed-on: https://chromium-review.googlesource.com/1154358
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579183}
Former-commit-id: 23682b07dfe0e86863d8514a9182acc4a574556a